tests/expectations/compiler/function/self_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372040]: The allowed accesses to `self` are `self.caller` and `self.signer`.
    --> compiler-test:5:21
     |
   5 |         return self.foo == addr;
     |                     ^^^
"""]
